--- a/widgets/controlcenter/controlcenter.scss
+++ b/widgets/controlcenter/controlcenter.scss
@@ -35,7 +35,7 @@
 
   .volume-slider-icon {
     color: $cyan;
-    font-size: 26px;
+    font-size: 27px;
     min-width: 24px;
   }
 
@@ -223,12 +223,14 @@
     font-size: 12px;
     color: $fg;
     font-weight: bold;
+    line-height: 1.25;
     min-width: 0;
   }
 
   .notif-body {
     font-size: 11px;
     color: $fg-muted;
+    line-height: 1.35;
     min-width: 0;
   }
 
